--- a/index.html
+++ b/index.html
@@ -1,10 +1,63 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/main.css">
+</head>
 
+<body>
+  <div>
+    <nav>
+      <ul>
+        <li>
+          About
+        </li>
+        <li>
+          Portfolio</li>
+          <li>
+            Code
+          </li>
+        </ul>
+      </nav>
+
+      <section>
+        <div>
+          Hello, I’m <span>Monalisa Chatterjee</span>.<br />
+          <span>they/them || she/her</span><br />
+          I’m looking for a <span>great</span> internship
+        </div>
+      </section>
+
+      <section>
+        <div>
+          I am currently a student at Ada developers Academy, which is a training program located in Seattle, Washington for women and gender diverse people who want to become software developers. <br />
+          Ada is tuition-free and is comprised of 6 months of full-time classroom training followed by 5 months in a paid industry internship.<br />
+          The curriculum includes html and css, sinatra and rails, building web APIs, javascript and TDD.
+        </div>
+      </section>
+
+      <section>
+        <p> <em>You can find me here!☺</em>
+        </p>
+
+        <ul>
+          <li>Email: anonymous@gmail.com</li>
+          <li><img src="images/logo-twitter.png" alt="Twitter"/>      <a href="http://Twitter.com">Twitter</a>
+
+          </li>
+          <li><img src="images/logo-facebook.png" alt="Facebook"/><a href="http://facebook.com">Facebook</a>
+          </li>
+        </ul>
+
+        <p><h4>Site Maintainer:</h4></p>
+        <img src="images/site-maintainer.png" alt="Goofy"/>
+
+      </section>
+
+
+
+    </div>
   </body>
-</html>
+  </html>
