Outline main css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body>
+<body class="parallax">
   <div>
     <nav>
       <ul>
@@ -17,20 +17,21 @@
         <li>
           Portfolio</li>
           <li>
-            Code
+            Hobby
           </li>
         </ul>
       </nav>
 
-      <section>
+      <section class = "hello">
         <div>
-          Hello, I’m <span>Monalisa Chatterjee</span>.<br />
-          <span>they/them || she/her</span><br />
-          I’m looking for a <span>great</span> internship
+          <p>
+            Hello! I’m<span><strong> Monalisa Chatterjee</strong></span>.<br />
+            <span> I use they/them || she/her </span> pronouns. I’m looking for a <span><em> great</em></span> internship.
+          </p>
         </div>
       </section>
 
-      <section>
+      <section class = "intro">
         <div>
           I am currently a student at Ada developers Academy, which is a training program located in Seattle, Washington for women and gender diverse people who want to become software developers. <br />
           Ada is tuition-free and is comprised of 6 months of full-time classroom training followed by 5 months in a paid industry internship.<br />
@@ -38,26 +39,30 @@
         </div>
       </section>
 
-      <section>
+      <section class = "contact">
         <p> <em>You can find me here!☺</em>
         </p>
 
         <ul>
-          <li>Email: anonymous@gmail.com</li>
-          <li><img src="images/logo-twitter.png" alt="Twitter"/>      <a href="http://Twitter.com">Twitter</a>
-
+          <li><img src="images/logo-twitter.png" alt="Twitter"/><a href="https://twitter.com/madamecurie10">Twitter</a>
           </li>
-          <li><img src="images/logo-facebook.png" alt="Facebook"/><a href="http://facebook.com">Facebook</a>
+          <li><img src="images/logo-linkedin.png" alt="Linkedin"/><a href="www.linkedin.com/in/monalisa-chatterjee
+            ">Linkedin</a>
+          </li>
+          <li>
+            <a href="mailto:spam@adadevelopersacademy.org">fakemail</a>
           </li>
         </ul>
-
-        <p><h4>Site Maintainer:</h4></p>
-        <img src="images/site-maintainer.png" alt="Goofy"/>
-
       </section>
 
 
-
+        <aside><h4>Site Maintainer:</h4>
+        <img class = "rounded-corners" src="images/site-maintainer.jpg" alt="myself"/>
+      </aside>
     </div>
   </body>
+
+  <footer>Copyright © 2018 <p>This site is maintained by <a href="">MonalisaC</a>.</p></footer>
+  </html>
+
   </html>
