--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
       <section class = "hello">
         <div>
           <p>
-            Hello! I’m<span><strong> Monalisa Chatterjee</strong></span>.<br />
-            <span> I use they/them || she/her </span> pronouns. I’m looking for a <span><em> great</em></span> internship.
+            Hello! I’m&nbsp;<strong>Monalisa Chatterjee</strong>. I use they/them || she/her pronouns. I’m looking for a&nbsp;<em>great</em>&nbsp;internship.
           </p>
         </div>
       </section>
