--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>website</title>
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -12,56 +12,57 @@
     <nav>
       <ul>
         <li>
-          About
+          <a href="pages/about.html">&nbsp;About&nbsp;</a>
         </li>
         <li>
-          Portfolio</li>
-          <li>
-            Hobby
-          </li>
-        </ul>
-      </nav>
+          <a href="pages/portfolio.html">&nbsp;Portfolio&nbsp;</a>
+        </li>
+        <li>
+          <a href="pages/hobby-blog.html">&nbsp;Hobby&nbsp;</a>
+        </li>
+      </ul>
+    </nav>
 
-      <section class = "hello">
-        <div>
-          <p>
-            Hello! I’m&nbsp;<strong>Monalisa Chatterjee</strong>. I use they/them || she/her pronouns. I’m looking for a&nbsp;<em>great</em>&nbsp;internship.
-          </p>
-        </div>
-      </section>
-
-      <section class = "intro">
-        <div>
-          I am currently a student at Ada developers Academy, which is a training program located in Seattle, Washington for women and gender diverse people who want to become software developers. <br />
-          Ada is tuition-free and is comprised of 6 months of full-time classroom training followed by 5 months in a paid industry internship.<br />
-          The curriculum includes html and css, sinatra and rails, building web APIs, javascript and TDD.
-        </div>
-      </section>
-
-      <section class = "contact">
-        <p> <em>You can find me here!☺</em>
+    <section class = "hello">
+      <div>
+        <p>
+          Hello! I’m&nbsp;<strong>Monalisa Chatterjee</strong>. I use they/them || she/her pronouns. I’m looking for a&nbsp;<em>great</em>&nbsp;internship.
         </p>
+      </div>
+    </section>
 
-        <ul>
-          <li><img src="images/logo-twitter.png" alt="Twitter"/><a href="https://twitter.com/madamecurie10">Twitter</a>
-          </li>
-          <li><img src="images/logo-linkedin.png" alt="Linkedin"/><a href="www.linkedin.com/in/monalisa-chatterjee
-            ">Linkedin</a>
-          </li>
-          <li>
-            <a href="mailto:spam@adadevelopersacademy.org">fakemail</a>
-          </li>
-        </ul>
-      </section>
+    <section class = "intro">
+      <div>
+        I am currently a student at Ada developers Academy, which is a training program located in Seattle, Washington for women and gender diverse people who want to become software developers. <br />
+        Ada is tuition-free and is comprised of 6 months of full-time classroom training followed by 5 months in a paid industry internship.<br />
+        The curriculum includes html and css, sinatra and rails, building web APIs, javascript and TDD.
+      </div>
+    </section>
+
+    <section class = "contact">
+      <p> <em>You can find me here!☺</em>
+      </p>
+
+      <ul>
+        <li><img src="images/logo-twitter.png" alt="Twitter"/><a href="https://twitter.com/madamecurie10">Twitter</a>
+        </li>
+        <li><img src="images/logo-linkedin.png" alt="Linkedin"/><a href="www.linkedin.com/in/monalisa-chatterjee
+          ">Linkedin</a>
+        </li>
+        <li>
+          <a href="mailto:spam@adadevelopersacademy.org">fakemail</a>
+        </li>
+      </ul>
+    </section>
 
 
-        <aside><h4>Site Maintainer:</h4>
-        <img class = "rounded-corners" src="images/site-maintainer.jpg" alt="myself"/>
-      </aside>
-    </div>
-  </body>
+    <aside><h4>Site Maintainer:</h4>
+      <img class = "rounded-corners" src="images/site-maintainer.jpg" alt="myself"/>
+    </aside>
+  </div>
+</body>
 
-  <footer>Copyright © 2018 <p>This site is maintained by <a href="">MonalisaC</a>.</p></footer>
-  </html>
+<footer>Copyright © 2018 <p>This site is maintained by <a href="">MonalisaC</a>.</p></footer>
+</html>
 
-  </html>
+</html>
