--- a/pages/about.html
+++ b/pages/about.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<html class = "bg">
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/about.css">
+</head>
+<body >
+  <article>
+    <section>
+      <div id="banner">
+        <img src="images/preview.gif" alt="banner"/>
+      </div>
+    </section>
 
-  </body>
+    <section >
+      <blockquote>
+        I'd rather be a could-be if I cannot be an are;
+        because a could-be is a maybe who is reaching for a star.
+        I'd rather be a has-been than a might-have-been, by far;
+        for a might have-been has never been, but a has was once an are.
+
+        - Milton Berle
+      </blockquote>
+    </section>
+
+
+    <section id="content">
+      <p>I am a mother to my beautiful daughter, a wife to my loving husband, a daughter to my wonderful dad, a friend to all my buddies, and a woman who aspires to be more...</p>
+
+      <p>I was born and brought up in India. My dad had a job that required him to move often, and so I lived in different places though never got a chance to live at my birthplace or where my mother tongue is spoken.</p>
+
+      <p>I have an MBA in Finance &amp; Marketing, and have worked for a few years in the IT enabled services and Finance sector back when I was in India.</p>
+    </section>
+
+  </article>
+
+</body>
 </html>
