Updated about, updated menu

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <meta charset="utf-8">
   <title>website</title>
   <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/index.css">
 </head>
 
 <body class="parallax">
   <div>
     <nav>
       <ul>
+        <li>
+          <a href="index.html">&nbsp;Home&nbsp;</a>
+        </li>
         <li>
           <a href="pages/about.html">&nbsp;About&nbsp;</a>
         </li>
