Add style and content for hobbies, index, about

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 
-<body class="parallax">
+<body class="bg">
   <div>
     <nav>
       <ul>
@@ -22,7 +22,7 @@
           <a href="pages/portfolio.html">&nbsp;Portfolio&nbsp;</a>
         </li>
         <li>
-          <a href="pages/hobby-blog.html">&nbsp;Hobby&nbsp;</a>
+          <a href="pages/hobbies.html">&nbsp;Hobbies&nbsp;</a>
         </li>
       </ul>
     </nav>
