--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -3,8 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="../styles/normalize.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/portfolio.css">
   </head>
-  <body>
-
+  <body class="bg">
+    <div>
+      <nav>
+        <ul>
+          <li>
+            <a href="../index.html">&nbsp;Home&nbsp;</a>
+          </li>
+          <li>
+            <a href="about.html">&nbsp;About&nbsp;</a>
+          </li>
+          <li>
+            <a href="portfolio.html">&nbsp;Portfolio&nbsp;</a>
+          </li>
+          <li>
+            <a href="hobbies.html">&nbsp;Hobbies&nbsp;</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </body>
 </html>
