--- a/pages/about.html
+++ b/pages/about.html
@@ -9,22 +9,23 @@
 </head>
 <body class="bg">
   <div>
-  <nav>
-    <ul>
-      <li>
-        <a href="../index.html">&nbsp;Home&nbsp;</a>
-      </li>
-      <li>
-        <a href="about.html">&nbsp;About&nbsp;</a>
-      </li>
-      <li>
-        <a href="portfolio.html">&nbsp;Portfolio&nbsp;</a>
-      </li>
-      <li>
-        <a href="hobby-blog.html">&nbsp;Hobby&nbsp;</a>
-      </li>
-    </ul>
-  </nav>
+    <nav>
+      <ul>
+        <li>
+          <a href="../index.html">&nbsp;Home&nbsp;</a>
+        </li>
+        <li>
+          <a href="about.html">&nbsp;About&nbsp;</a>
+        </li>
+        <li>
+          <a href="portfolio.html">&nbsp;Portfolio&nbsp;</a>
+        </li>
+        <li>
+          <a href="hobbies.html">&nbsp;Hobbies&nbsp;</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
   <article>
     <section class="quote">
       <blockquote>
