Add footer content and style to all pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </li>
       </ul>
     </nav>
-
+  </div>
     <section class = "hello">
       <div>
         <p>
@@ -43,30 +43,19 @@
       </div>
     </section>
 
-    <section class = "contact">
-      <p> <em>You can find me here!☺</em>
-      </p>
+    <footer>
+      <div>Copyright © 2018</div>
+      <div class="maintainedby">
+        <div>Site maintained by MonalisaC</div>
+        <div class="hidden">
+          <img class="rounded-corners" src="images/site-maintainer.jpg" alt="myself"/>
+        </div>
+      </div>
+      <div>
+        <a href="https://twitter.com/madamecurie10"><img class="profile" src="images/logo-twitter.png" alt="Twitter"/></a>
+        <a href="https://www.linkedin.com/in/monalisa-chatterjee"><img class="profile" src="images/logo-linkedin.png" alt="Linkedin"/></a>
+      </div>
+    </footer>
 
-      <ul>
-        <li><img src="images/logo-twitter.png" alt="Twitter"/><a href="https://twitter.com/madamecurie10">Twitter</a>
-        </li>
-        <li><img src="images/logo-linkedin.png" alt="Linkedin"/><a href="www.linkedin.com/in/monalisa-chatterjee
-          ">Linkedin</a>
-        </li>
-        <li>
-          <a href="mailto:spam@adadevelopersacademy.org">fakemail</a>
-        </li>
-      </ul>
-    </section>
-
-
-    <aside><h4>Site Maintainer:</h4>
-      <img class = "rounded-corners" src="images/site-maintainer.jpg" alt="myself"/>
-    </aside>
-  </div>
-</body>
-
-<footer>Copyright © 2018 <p>This site is maintained by <a href="">MonalisaC</a>.</p></footer>
-</html>
-
+  </body>
 </html>
