--- a/pages/about.html
+++ b/pages/about.html
@@ -46,6 +46,18 @@
     </section>
 
   </article>
-</div>
+  <footer>
+    <div>Copyright © 2018</div>
+    <div class="maintainedby">
+      <div>Site maintained by MonalisaC</div>
+      <div class="hidden">
+        <img class="rounded-corners" src="../images/site-maintainer.jpg" alt="myself"/>
+      </div>
+    </div>
+    <div>
+      <a href="https://twitter.com/madamecurie10"><img class="profile" src="../images/logo-twitter.png" alt="Twitter"/></a>
+      <a href="https://www.linkedin.com/in/monalisa-chatterjee"><img class="profile" src="../images/logo-linkedin.png" alt="Linkedin"/></a>
+    </div>
+  </footer>
 </body>
 </html>
