--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="../styles/normalize.css">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/portfolio.css">
-  </head>
-  <body class="bg">
-    <div>
-      <nav>
-        <ul>
-          <li>
-            <a href="../index.html">&nbsp;Home&nbsp;</a>
-          </li>
-          <li>
-            <a href="about.html">&nbsp;About&nbsp;</a>
-          </li>
-          <li>
-            <a href="portfolio.html">&nbsp;Portfolio&nbsp;</a>
-          </li>
-          <li>
-            <a href="hobbies.html">&nbsp;Hobbies&nbsp;</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    <footer>
-      <div>Copyright © 2018</div>
-      <div class="maintainedby">
-        <div>Site maintained by MonalisaC</div>
-        <div class="hidden">
-          <img class="rounded-corners" src="../images/site-maintainer.jpg" alt="myself"/>
-        </div>
-      </div>
-      <div>
-        <a href="https://twitter.com/madamecurie10"><img class="profile" src="../images/logo-twitter.png" alt="Twitter"/></a>
-        <a href="https://www.linkedin.com/in/monalisa-chatterjee"><img class="profile" src="../images/logo-linkedin.png" alt="Linkedin"/></a>
-      </div>
-    </footer>
-  </body>
-</html>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="../styles/normalize.css">
+  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../styles/portfolio.css">
+</head>
+<body class="bg">
+  <div>
+    <nav>
+      <ul>
+        <li>
+          <a href="../index.html">&nbsp;Home&nbsp;</a>
+        </li>
+        <li>
+          <a href="about.html">&nbsp;About&nbsp;</a>
+        </li>
+        <li>
+          <a href="portfolio.html">&nbsp;Portfolio&nbsp;</a>
+        </li>
+        <li>
+          <a href="hobbies.html">&nbsp;Hobbies&nbsp;</a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="detail-container">
+      <section>
+        <h2>Voting <a href="https://gist.github.com/MonalisaC/6d44c2614c5f01b8ed33da77da5fdadf"><img class="github" src="../images/github-mark.png" alt = "github" /></a>
+        </h2>
+        <p>
+          Create an electronic election program that tracks votes, total votes, and determines a winner.</p>
+        </section>
+        <section>
+          <h2>Calculator<a href="https://github.com/MonalisaC/Calculator"><img class="github" src="../images/github-mark.png" alt = "github" /></a></h2>
+          <p>
+            Build a calculator command line interface (CLI) that allows a user to perform simple arithmetic.</p>
+          </section>
+          <section>
+            <h2>Scrabble<a href="https://github.com/MonalisaC/Scrabble"><img class="github" src="../images/github-mark.png" alt = "github" /></a></h2>
+            <p>
+              Use Test Driven Development (TDD) to create a collection of Ruby classes for Scrabble game.</p>
+            </section>
+            <section>
+              <h2>Hotel<a href="https://github.com/MonalisaC/hotel"><img class="github" src="../images/github-mark.png" alt = "github" /></a></h2>
+              <p>
+                Build a booking system for a small hotel using object-oriented principles.</p>
+              </section>
+            </div>
+
+          </div>
+          <footer>
+            <div>Copyright © 2018</div>
+            <div class="maintainedby">
+              <div>Site maintained by MonalisaC</div>
+              <div class="hidden">
+                <img class="rounded-corners" src="../images/site-maintainer.jpg" alt="myself"/>
+              </div>
+            </div>
+            <div>
+              <a href="https://twitter.com/madamecurie10"><img class="profile" src="../images/logo-twitter.png" alt="Twitter"/></a>
+              <a href="https://www.linkedin.com/in/monalisa-chatterjee"><img class="profile" src="../images/logo-linkedin.png" alt="Linkedin"/></a>
+            </div>
+          </footer>
+        </body>
+        </html>
