Add style current

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div>
     <nav>
       <ul>
-        <li>
+        <li class = "current">
           <a href="index.html">&nbsp;Home&nbsp;</a>
         </li>
         <li>
