--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@
         <li>
           <a href="../index.html">&nbsp;Home&nbsp;</a>
         </li>
-        <li>
+        <li class = "current">
           <a href="about.html">&nbsp;About&nbsp;</a>
         </li>
         <li>
