--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -21,7 +21,7 @@
           <li>
             <a href="portfolio.html">&nbsp;Portfolio&nbsp;</a>
           </li>
-          <li>
+          <li class = "current">
             <a href="hobbies.html">&nbsp;Hobbies&nbsp;</a>
           </li>
         </ul>
