--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -17,7 +17,7 @@
         <li>
           <a href="about.html">&nbsp;About&nbsp;</a>
         </li>
-        <li>
+        <li class = "current">
           <a href="portfolio.html">&nbsp;Portfolio&nbsp;</a>
         </li>
         <li>
