Link from all of grid content

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -28,25 +28,33 @@
 
     <div class="detail-container">
       <section>
-        <h2>Voting <a href="https://gist.github.com/MonalisaC/6d44c2614c5f01b8ed33da77da5fdadf"><img class="github" src="../images/github-mark.png" alt = "github" /></a>
+        <a href="https://gist.github.com/MonalisaC/6d44c2614c5f01b8ed33da77da5fdadf">
+        <h2>Voting <img class="github" src="../images/github-mark.png" alt = "github" />
         </h2>
         <p>
           Create an electronic election program that tracks votes, total votes, and determines a winner.</p>
+        </a>
         </section>
         <section>
-          <h2>Calculator<a href="https://github.com/MonalisaC/Calculator"><img class="github" src="../images/github-mark.png" alt = "github" /></a></h2>
+          <a href="https://github.com/MonalisaC/Calculator">
+          <h2>Calculator<img class="github" src="../images/github-mark.png" alt = "github" /></h2>
           <p>
             Build a calculator command line interface (CLI) that allows a user to perform simple arithmetic.</p>
+          </a>
           </section>
           <section>
-            <h2>Scrabble<a href="https://github.com/MonalisaC/Scrabble"><img class="github" src="../images/github-mark.png" alt = "github" /></a></h2>
+            <a href="https://github.com/MonalisaC/Scrabble">
+            <h2>Scrabble<img class="github" src="../images/github-mark.png" alt = "github" /></h2>
             <p>
               Use Test Driven Development (TDD) to create a collection of Ruby classes for Scrabble game.</p>
+            </a>
             </section>
             <section>
-              <h2>Hotel<a href="https://github.com/MonalisaC/hotel"><img class="github" src="../images/github-mark.png" alt = "github" /></a></h2>
+              <a href="https://github.com/MonalisaC/hotel">
+              <h2>Hotel<img class="github" src="../images/github-mark.png" alt = "github" /></h2>
               <p>
                 Build a booking system for a small hotel using object-oriented principles.</p>
+              </a>
               </section>
             </div>
 
