--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -29,48 +29,80 @@
     <div class="detail-container">
       <section>
         <a href="https://gist.github.com/MonalisaC/6d44c2614c5f01b8ed33da77da5fdadf">
-        <h2>Voting <img class="github" src="../images/github-mark.png" alt = "github" />
-        </h2>
-        <p>
-          Create an electronic election program that tracks votes, total votes, and determines a winner.</p>
-        </a>
-        </section>
-        <section>
-          <a href="https://github.com/MonalisaC/Calculator">
-          <h2>Calculator<img class="github" src="../images/github-mark.png" alt = "github" /></h2>
-          <p>
-            Build a calculator command line interface (CLI) that allows a user to perform simple arithmetic.</p>
-          </a>
-          </section>
-          <section>
-            <a href="https://github.com/MonalisaC/Scrabble">
-            <h2>Scrabble<img class="github" src="../images/github-mark.png" alt = "github" /></h2>
-            <p>
-              Use Test Driven Development (TDD) to create a collection of Ruby classes for Scrabble game.</p>
-            </a>
-            </section>
-            <section>
-              <a href="https://github.com/MonalisaC/hotel">
-              <h2>Hotel<img class="github" src="../images/github-mark.png" alt = "github" /></h2>
-              <p>
-                Build a booking system for a small hotel using object-oriented principles.</p>
-              </a>
-              </section>
-            </div>
-
-          </div>
-          <footer>
-            <div>Copyright © 2018</div>
-            <div class="maintainedby">
-              <div>Site maintained by MonalisaC</div>
-              <div class="hidden">
-                <img class="rounded-corners" src="../images/site-maintainer.jpg" alt="myself"/>
+          <h2>Voting <img class="github" src="../images/github-mark.png" alt = "github" />
+          </h2>
+          <div class="card">
+            <div class="content">
+              <div class="front">
+                <img src="../images/dilbert.gif" />
+              </div>
+              <div class="back">
+                <p>Create an electronic election program that tracks votes, total votes, and determines a winner.</p>
               </div>
             </div>
-            <div>
-              <a href="https://twitter.com/madamecurie10"><img class="profile" src="../images/logo-twitter.png" alt="Twitter"/></a>
-              <a href="https://www.linkedin.com/in/monalisa-chatterjee"><img class="profile" src="../images/logo-linkedin.png" alt="Linkedin"/></a>
+          </div>
+        </a>
+      </section>
+      <section>
+        <a href="https://github.com/MonalisaC/Calculator">
+          <h2>Calculator<img class="github" src="../images/github-mark.png" alt = "github" /></h2>
+          <div class="card">
+            <div class="content">
+              <div class="front">
+                <img src="../images/calculator.gif" />
+              </div>
+              <div class="back">
+                <p>Build a calculator command line interface (CLI) that allows a user to perform simple arithmetic.</p>
+              </div>
             </div>
-          </footer>
-        </body>
-        </html>
+          </div>
+        </a>
+      </section>
+      <section>
+        <a href="https://github.com/MonalisaC/Scrabble">
+          <h2>Scrabble<img class="github" src="../images/github-mark.png" alt = "github" /></h2>
+          <div class="card">
+            <div class="content">
+              <div class="front">
+                <img src="../images/scrabble.gif" />
+              </div>
+              <div class="back">
+                <p>Use Test Driven Development (TDD) to create a collection of Ruby classes for Scrabble game.</p>
+              </div>
+            </div>
+          </div>
+        </a>
+      </section>
+      <section>
+        <a href="https://github.com/MonalisaC/hotel">
+          <h2>Hotel<img class="github" src="../images/github-mark.png" alt = "github" /></h2>
+          <div class="card">
+            <div class="content">
+              <div class="front">
+                <img src="../images/hotel.gif" />
+              </div>
+              <div class="back">
+                <p>Build a booking system for a small hotel using object-oriented principles.</p>
+              </div>
+            </div>
+          </div>
+        </a>
+      </section>
+    </div>
+
+  </div>
+  <footer>
+    <div>Copyright © 2018</div>
+    <div class="maintainedby">
+      <div>Site maintained by MonalisaC</div>
+      <div class="hidden">
+        <img class="rounded-corners" src="../images/site-maintainer.jpg" alt="myself"/>
+      </div>
+    </div>
+    <div>
+      <a href="https://twitter.com/madamecurie10"><img class="profile" src="../images/logo-twitter.png" alt="Twitter"/></a>
+      <a href="https://www.linkedin.com/in/monalisa-chatterjee"><img class="profile" src="../images/logo-linkedin.png" alt="Linkedin"/></a>
+    </div>
+  </footer>
+</body>
+</html>
