--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,7 @@
 <html class="bg">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Monalisa Chatterjee - student- ada developers academy-About me</title>
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../styles/style.css">
   <link rel="stylesheet" href="../styles/about.css">
