--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Hobby - creative pursuits</title>
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/hobbies.css">
-    <link rel="stylesheet" href="../styles/slider-ltr.css">
   </head>
   <body class="bg">
     <div>
@@ -40,7 +39,7 @@
               </div>
             </div>
             <div class="images">
-              <img src="../images/scrapbooking.jpg">
+              <img src="../images/scrapbooking.jpg" alt="card">
             </div>
           </div>
           <!-- Second slide -->
@@ -53,7 +52,7 @@
               </div>
             </div>
             <div class="images">
-              <img src="../images/food.jpg">
+              <img src="../images/food.jpg" alt="stuffed capsicum">
             </div>
           </div>
           <!-- Third slide -->
@@ -66,7 +65,7 @@
               </div>
             </div>
             <div class="images">
-              <img src="../images/dance.jpg">
+              <img src="../images/dance.jpg" alt="bahubali">
             </div>
           </div>
           <!-- Fourth slide -->
@@ -79,7 +78,7 @@
               </div>
             </div>
             <div class="images">
-              <img src="../images/gardening.jpg">
+              <img src="../images/gardening.jpg" alt= "container garden">
             </div>
           </div>
         </div>
