--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Ruby programming</title>
   <link rel="stylesheet" href="../styles/normalize.css">
   <link rel="stylesheet" href="../styles/style.css">
   <link rel="stylesheet" href="../styles/portfolio.css">
@@ -34,7 +34,7 @@
           <div class="card">
             <div class="content">
               <div class="front">
-                <img src="../images/dilbert.gif" />
+                <img src="../images/dilbert.gif" alt="dilbert gif" />
               </div>
               <div class="back">
                 <p>Create an electronic election program that tracks votes, total votes, and determines a winner.</p>
@@ -49,7 +49,7 @@
           <div class="card">
             <div class="content">
               <div class="front">
-                <img src="../images/calculator.gif" />
+                <img src="../images/calculator.gif" alt="calculator gif"/>
               </div>
               <div class="back">
                 <p>Build a calculator command line interface (CLI) that allows a user to perform simple arithmetic.</p>
@@ -64,7 +64,7 @@
           <div class="card">
             <div class="content">
               <div class="front">
-                <img src="../images/scrabble.gif" />
+                <img src="../images/scrabble.gif" alt= "scrabble gif" />
               </div>
               <div class="back">
                 <p>Use Test Driven Development (TDD) to create a collection of Ruby classes for Scrabble game.</p>
@@ -79,7 +79,7 @@
           <div class="card">
             <div class="content">
               <div class="front">
-                <img src="../images/hotel.gif" />
+                <img src="../images/hotel.gif" alt="hotel gif" />
               </div>
               <div class="back">
                 <p>Build a booking system for a small hotel using object-oriented principles.</p>
