--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -35,7 +35,7 @@
             <div class="content">
               <div class="content-txt">
                 <h1> Scrapbooking </h1>
-                <h2> I've also done some card making and scrapbooking, and continue doing so every now and then. Someone rightly said that there's delight in the little things! </h2>
+                <h2> I enjoy card making and scrapbooking. Someone rightly said that there's delight in the little things! </h2>
               </div>
             </div>
             <div class="images">
@@ -48,7 +48,7 @@
             <div class="content">
               <div class="content-txt">
                 <h1> Cooking </h1>
-                <h2> I love food (who doesn't!) and consider myself a foodie. My love for food often compels me to cook and also experiment with new and interesting eats. I could go on about all the food and delicacies I love. But that's for some other day!</h2>
+                <h2> I love food. My love for food often compels me to cook and also experiment with new and interesting eats.</h2>
               </div>
             </div>
             <div class="images">
