--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -37,7 +37,7 @@
                 <img src="../images/dilbert.gif" alt="dilbert gif" />
               </div>
               <div class="back">
-                <p>Create an electronic election program that tracks votes, total votes, and determines a winner.</p>
+                <p>An electronic election program that tracks votes, total votes, and determines a winner.</p>
               </div>
             </div>
           </div>
@@ -52,7 +52,7 @@
                 <img src="../images/calculator.gif" alt="calculator gif"/>
               </div>
               <div class="back">
-                <p>Build a calculator command line interface (CLI) that allows a user to perform simple arithmetic.</p>
+                <p>A command line interface (CLI) that allows a user to perform simple arithmetic operations.</p>
               </div>
             </div>
           </div>
@@ -67,7 +67,7 @@
                 <img src="../images/scrabble.gif" alt= "scrabble gif" />
               </div>
               <div class="back">
-                <p>Use Test Driven Development (TDD) to create a collection of Ruby classes for Scrabble game.</p>
+                <p>A collection of Ruby classes for Scrabble game, using TDD (Test Driven Development).</p>
               </div>
             </div>
           </div>
@@ -82,7 +82,7 @@
                 <img src="../images/hotel.gif" alt="hotel gif" />
               </div>
               <div class="back">
-                <p>Build a booking system for a small hotel using object-oriented principles.</p>
+                <p>A booking system for a small hotel using object-oriented principles.</p>
               </div>
             </div>
           </div>
