--- a/pages/about.html
+++ b/pages/about.html
@@ -42,7 +42,7 @@
 
         <p>I was born and brought up in India. My dad had a job that required him to move often, and so I lived in different places though never got a chance to live at my birthplace or where my mother tongue is spoken.</p>
 
-        <p>I have an MBA in Finance &amp; Marketing, and have worked for a few years in the IT enabled services and Finance sector back when I was in India.</p>
+        <p>I have an MBA in Finance &amp; Marketing, and have worked for a few years in the IT enabled services and Finance sector when I was in India.</p>
     </section>
 
   </article>
